# CeadlySDK

./: publish.yml
.github/workflows/: publish.yml
sdk/: README.md  pyproject.toml
sdk/src/ceadly/: __init__.py  client.py  exceptions.py  guard.py
sdk/tests/: conftest.py  test_client.py  test_guard.py  test_integration.py
